<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linearbd.rashinscanner.Activities.ScanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MaterialAnimations.TextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/elevation_header">

        <TextView
            android:id="@+id/title"
            style="@style/MaterialAnimations.TextAppearance.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/scan_result"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_padding"
        android:id="@+id/barcode_image"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcode_image"
        android:orientation="vertical"
        android:background="#ffffff"
        android:id="@+id/type_container"
        android:layout_margin="@dimen/large_padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format"
                style="@style/MaterialAnimations.TextAppearance.Title" />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialAnimations.TextAppearance.Title"
                android:textStyle="normal"
                android:id="@+id/tv_format"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                style="@style/MaterialAnimations.TextAppearance.Title" />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialAnimations.TextAppearance.Title"
                android:textStyle="normal"
                android:id="@+id/tv_type"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                style="@style/MaterialAnimations.TextAppearance.Title" />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialAnimations.TextAppearance.Title"
                android:textStyle="normal"
                android:id="@+id/tv_time"/>

        </LinearLayout>



    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_container"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginRight="@dimen/large_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"
            android:padding="@dimen/default_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/text_container"
                android:padding="@dimen/default_padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    style="@style/MaterialAnimations.TextAppearance.Display" />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MaterialAnimations.TextAppearance.Display"
                    android:textStyle="normal"
                    android:id="@+id/tv_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/isbn_container"
                android:padding="@dimen/default_padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isbn"
                    style="@style/MaterialAnimations.TextAppearance.Display" />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MaterialAnimations.TextAppearance.Display"
                    android:textStyle="normal"
                    android:id="@+id/tv_isbn"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/email_container"
                android:padding="@dimen/default_padding"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        style="@style/MaterialAnimations.TextAppearance.Title" />

                    <TextView
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/MaterialAnimations.TextAppearance.Title"
                        android:textStyle="normal"
                        android:id="@+id/tv_email"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subject"
                        style="@style/MaterialAnimations.TextAppearance.Title" />

                    <TextView
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/MaterialAnimations.TextAppearance.Title"
                        android:textStyle="normal"
                        android:id="@+id/tv_subject"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        style="@style/MaterialAnimations.TextAppearance.Title" />

                    <TextView
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/MaterialAnimations.TextAppearance.Title"
                        android:textStyle="normal"
                        android:id="@+id/tv_message"/>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>







</RelativeLayout>
